# ff-2024-create-python-package

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json
src/my_python_package/: __init__.py  add_numbers.py
src/my_python_package_SSheng/: add_numbers.py
tests/: test_script.py
