################################################################################
# Build Configuration
################################################################################

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

################################################################################
# Project Configuration
################################################################################

[project]
name = "my_python_package"

version = "0.1.0"

description = "This is my first python package."
authors = [
    { name = "Sky Kehan Sheng", email = "skysheng7@gmail.com" },
]
license = "MIT"
readme = {"file" = "README.md", "content-type" = "text/markdown"}
requires-python = ">=3.10"
# Please consult https://pypi.org/classifiers/ for a full list.
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
# TODO: add keywords
keywords = []
# TODO: add dependencies
dependencies = []

[project.urls]
Documentation = "https://my_python_package.readthedocs.io"
Download = "https://pypi.org/project/my_python_package/#files"

[project.optional-dependencies]
dev = [
    "hatch",
    "pre-commit",
]

################################################################################
# Tool Configuration
################################################################################

[tool.hatch.build]
only-packages = true

[tool.hatch.build.targets.wheel]
packages = ["src/my_python_package"]

[tool.hatch.envs.test]
description = """Run the test suite."""
extra-dependencies = [
   "pytest",
   "pytest-cov", 
]

[[tool.hatch.envs.test.matrix]]
python = ["3.10", "3.11"]

[tool.hatch.envs.test.scripts]
run_test = "pytest {args:--cov=mypkg --cov-report=term-missing}"

[tool.hatch.envs.format]
description = """Format your code."""
python = "3.11"
extra-dependencies = [
  "black",
  "isort",
]

[tool.hatch.envs.format.scripts]
format_code = [
   "isort .",
   "black ."
   ]
